--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>IDEA</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="./aos/aos.css">
@@ -94,7 +94,7 @@
   <main>
     <section class="gorras1 py-5" id="gorrass">
       <div class="container">
-        <div class="row">
+        <div class="row" data-aos="fade-up">
           <div class="col-lg-3 col-sm-6">
             <div class="card">
               <img src="..." class="card-img-top img-fluid" alt="...">
@@ -335,7 +335,7 @@
       </div>
     </FOoter>
   </main>
-  <script src="./aos-master/src/js/aos.js"></script>
+  <script src="./aos/aos.js"></script>
   <script src="./js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
