--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="Cuerpo">
   <header>
     <!-- Navbar-->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top" id="principio">
       <div class="container">
         <a class="navbar-brand" href="#">IDEA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#gorrass">Gorras</a>
+              <a class="nav-link active" aria-current="page" href="prueba.html">Gorras</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#mochilas">Mochilas</a>
@@ -91,99 +91,78 @@
       </div>
     </section>
   </header>
-  <main>
-    <section class="gorras1 py-5" id="gorrass">
-      <div class="container">
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-3 col-sm-6">
-            <div class="card">
-              <img src="..." class="card-img-top img-fluid" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-outline-dark">Go somewhere</a>
-              </div>
+  <!--Tarjetas con imagen de gorras y mochilas con descripcion-->
+  <section class="producto">
+    <div class="container py-5">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="card" style="width: 35rem;">
+            <img src="img/13.webp" class="card-img-top img-fluid" alt="mochila-negra-blanca">
+            <div class="card-body">
+              <h5 class="card-title">Mochilas</h5>
+              <p class="card-text">Descubre tu aventura perfecta con nuestras mochilas de alta calidad: estilo,
+                funcionalidad y comodidad en un solo lugar.</p>
+              <a href="#" class="btn btn-outline-secondary">Explorar</a>
             </div>
           </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="card">
-              <img src="..." class="card-img-top img-fluid" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-outline-dark">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="card">
-              <img src="..." class="card-img-top img-fluid" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-outline-dark">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="card">
-              <img src="..." class="card-img-top img-fluid" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-outline-dark">Go somewhere</a>
-              </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12" id="Gorrasb">
+          <div class="card" style="width: 35rem;">
+            <img src="img/15.webp" class="card-img-top" alt="gorra-negra">
+            <div class="card-body">
+              <h5 class="card-title">Gorras</h5>
+              <p class="card-text">Encuentra el estilo que te define con nuestras gorras exclusivas. ¡Eleva tu look
+                con nosotros!</p>
+              <a href="#" class="btn btn-outline-secondary">Explorar</a>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <section class="py-5" id="gorrass">
+    </div>
+  </section>
+  <main>
+    <section class="gorras1" id="gorrass">
       <div class="container">
-        <div class="row">
+        <div class="row" data-aos="fade-up">
           <div class="col-lg-3 col-sm-6">
-            <div class="cards">
-              <img src="..." class="card-img-top img-fluid" alt="...">
-              <div class="cards-body">
-                <h5 class="cards-title">Card title</h5>
-                <p class="cards-text">Some quick example text to build on the card title and make up the bulk of the
+            <div class="card">
+              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Planas</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <div class="cards">
-              <img src="..." class="card-img-top img-fluid" alt="...">
-              <div class="cards-body">
-                <h5 class="cards-title">Card title</h5>
-                <p class="cards-text">Some quick example text to build on the card title and make up the bulk of the
+            <div class="card">
+              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Curvas</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <div class="cards">
-              <img src="..." class="card-img-top img-fluid" alt="...">
-              <div class="cards-body">
-                <h5 class="cards-title">Card title</h5>
-                <p class="cards-text">Some quick example text to build on the card title and make up the bulk of the
+            <div class="card">
+              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Trucker</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <div class="cards">
-              <img src="..." class="card-img-top img-fluid" alt="...">
-              <div class="cards-body">
-                <h5 class="cards-title">Card title</h5>
-                <p class="cards-text">Some quick example text to build on the card title and make up the bulk of the
+            <div class="card">
+              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">De Pana</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
               </div>
@@ -194,12 +173,12 @@
     </section>
     <section class="mochilas1 py-5" id="mochilas">
       <div class="container">
-        <div class="row">
+        <div class="row" data-aos="fade-left">
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="..." class="card-img-top img-fluid" alt="...">
+              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Deportivas</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
@@ -208,9 +187,9 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="..." class="card-img-top img-fluid" alt="...">
+              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Urbanas</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
@@ -219,9 +198,9 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="..." class="card-img-top img-fluid" alt="...">
+              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Escolares </h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
@@ -230,59 +209,9 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="..." class="card-img-top img-fluid" alt="...">
+              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-outline-dark">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="mochilas2 py-5" id="mochilas">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-sm-6">
-            <div class="card">
-              <img src="..." class="card-img-top img-fluid" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-outline-dark">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="card">
-              <img src="..." class="card-img-top img-fluid" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-outline-dark">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="card">
-              <img src="..." class="card-img-top img-fluid" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-outline-dark">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="card">
-              <img src="..." class="card-img-top img-fluid" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Para laptop</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
@@ -292,37 +221,8 @@
         </div>
       </div>
     </section>
-    <!--Tarjetas con imagen de gorras y mochilas con descripcion-->
-    <section class="producto py-5">
-      <div class="container py-5">
-        <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12">
-            <div class="card" style="width: 35rem;">
-              <img src="img/13.webp" class="card-img-top img-fluid" alt="mochila-negra-blanca">
-              <div class="card-body">
-                <h5 class="card-title">Mochilas</h5>
-                <p class="card-text">Descubre tu aventura perfecta con nuestras mochilas de alta calidad: estilo,
-                  funcionalidad y comodidad en un solo lugar.</p>
-                <a href="#" class="btn btn-outline-secondary">Explorar</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-12" id="Gorrasb">
-            <div class="card" style="width: 35rem;">
-              <img src="img/15.webp" class="card-img-top" alt="gorra-negra">
-              <div class="card-body">
-                <h5 class="card-title">Gorras</h5>
-                <p class="card-text">Encuentra el estilo que te define con nuestras gorras exclusivas. ¡Eleva tu look
-                  con nosotros!</p>
-                <a href="#" class="btn btn-outline-secondary">Explorar</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--Seccion de politicas de privacidad-->
-    </section>
-    <FOoter class="footer border-top py-4">
+    <!--Seccion de politicas de privacidad-->
+    <FOoter class="footer border-top py-4" id="Politicas">
       <div class="container-lg">
         <div class="row">
           <div class="col-lg-12">
@@ -337,6 +237,7 @@
   </main>
   <script src="./aos/aos.js"></script>
   <script src="./js/script.js"></script>
+  <script src="./js/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
