--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="./aos/aos.css">
   <link rel="stylesheet" href="./CSS/bootstrap.min.css">
-  <link rel="stylesheet" href="./CSS/index.css">
+  <link rel="stylesheet" href="./css/index.css">
+
+
+
+
+
+
 </head>
 
 <body class="Cuerpo">
@@ -97,7 +103,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="card" style="width: 35rem;">
-            <img src="img/13.webp" class="card-img-top img-fluid" alt="mochila-negra-blanca">
+            <img src="./img/13.webp" class="card-img-top img-fluid" alt="mochila-negra-blanca">
             <div class="card-body">
               <h5 class="card-title">Mochilas</h5>
               <p class="card-text">Descubre tu aventura perfecta con nuestras mochilas de alta calidad: estilo,
@@ -108,7 +114,7 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12" id="Gorrasb">
           <div class="card" style="width: 35rem;">
-            <img src="img/15.webp" class="card-img-top" alt="gorra-negra">
+            <img src="./img/15.webp" class="card-img-top" alt="gorra-negra">
             <div class="card-body">
               <h5 class="card-title">Gorras</h5>
               <p class="card-text">Encuentra el estilo que te define con nuestras gorras exclusivas. ¡Eleva tu look
@@ -176,7 +182,7 @@
         <div class="row" data-aos="fade-left">
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <img src="./img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Deportivas</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -187,7 +193,7 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <img src="./img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Urbanas</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -198,7 +204,7 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <img src="./img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Escolares </h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -209,7 +215,7 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <img src="./img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Para laptop</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
