--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>IDEA</title>
+  <meta name="description" content="Gorras y mochilas de moda para destacar tu estilo. Explora nuestra colección de accesorios únicos y expresivos. ¡Descubre hoy!">
+  <meta name="keywords" content="Gorras, Gorra, Mochilas, Mochila, Moda urbana, Estilo casual">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="./aos/aos.css">
@@ -24,6 +26,7 @@
     <!-- Navbar-->
     <nav class="navbar navbar-expand-lg fixed-top" id="principio">
       <div class="container">
+        
         <a class="navbar-brand" href="#">IDEA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -132,7 +135,7 @@
         <div class="row" data-aos="fade-up">
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <img src="./img/plana.webp" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Planas</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -143,7 +146,7 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <img src="./img/curva-_1_-1.webp" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Curvas</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -154,7 +157,7 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <img src="./img/trucker (1).jpg" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Trucker</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -165,7 +168,7 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <img src="./img/pana (1).jpg" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">De Pana</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -182,9 +185,9 @@
         <div class="row" data-aos="fade-left">
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <img src="./img/senderismo (1).webp" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Deportivas</h5>
+                <h5 class="card-title">Senderismo</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
@@ -193,7 +196,7 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <img src="./img/urbana (1).webp" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Urbanas</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -204,7 +207,7 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <img src="./img/escolar (1).webp" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Escolares </h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -215,7 +218,7 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/Imagen-Ejemplo.png" class="card-img-top img-fluid" alt="...">
+              <img src="./img/laptop (1).jpg" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Para laptop</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
