--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <!--Titulo de la pagina web-->
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IDEA</title>
-  <meta name="description" content="Gorras y mochilas de moda para destacar tu estilo. Explora nuestra colección de accesorios únicos y expresivos. ¡Descubre hoy!">
-  <meta name="keywords" content="Gorras, Gorra, Mochilas, Mochila, Moda urbana, Estilo casual">
+  <meta name="description" content="Gorras y mochilas de moda para destacar tu estilo. Explora nuestra colección de accesorios únicos y expresivos. ¡Descubre hoy!" />
+  <meta name="keywords" content="Gorras, Gorra, Mochilas, Mochila, Moda urbana, Estilo casual" />
+  <meta name="author" content="nombre del estudio">
+
+ 
+  <link rel="stylesheet" href="./aos/aos.css" />
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="./aos/aos.css">
-  <link rel="stylesheet" href="./CSS/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/index.css">
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
 
+  
+  <meta name="google-site-verification" content="vHkHDqUwN6fYkllW0SomT0ThXuEaejEF1isgDHFUTpY" />
 
-
-
-
+  <link rel="stylesheet" href="./css/index.css" />
 
 </head>
-
+<main>
 <body class="Cuerpo">
   <header>
     <!-- Navbar-->
     <nav class="navbar navbar-expand-lg fixed-top" id="principio">
       <div class="container">
-        
         <a class="navbar-brand" href="#">IDEA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +81,7 @@
           </li>
           <!-- Icono del usuario -->
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
+            <a class="nav-link active" aria-current="page" href="./sesion.html">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person"
                 viewBox="0 0 16 16">
                 <path
@@ -94,8 +95,7 @@
     <section class="inicio">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
-          </div>
+          <div class="col-lg-12"></div>
         </div>
       </div>
     </section>
@@ -105,23 +105,27 @@
     <div class="container py-5">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="card" style="width: 35rem;">
-            <img src="./img/13.webp" class="card-img-top img-fluid" alt="mochila-negra-blanca">
+          <div class="card" style="width: 35rem">
+            <img src="./img/13.webp" class="card-img-top img-fluid" alt="mochila-negra-blanca" />
             <div class="card-body">
               <h5 class="card-title">Mochilas</h5>
-              <p class="card-text">Descubre tu aventura perfecta con nuestras mochilas de alta calidad: estilo,
-                funcionalidad y comodidad en un solo lugar.</p>
+              <p class="card-text">
+                Descubre tu aventura perfecta con nuestras mochilas de alta
+                calidad: estilo, funcionalidad y comodidad en un solo lugar.
+              </p>
               <a href="#" class="btn btn-outline-secondary">Explorar</a>
             </div>
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12" id="Gorrasb">
-          <div class="card" style="width: 35rem;">
-            <img src="./img/15.webp" class="card-img-top" alt="gorra-negra">
+          <div class="card" style="width: 35rem">
+            <img src="./img/15.webp" class="card-img-top" alt="gorra-negra" />
             <div class="card-body">
               <h5 class="card-title">Gorras</h5>
-              <p class="card-text">Encuentra el estilo que te define con nuestras gorras exclusivas. ¡Eleva tu look
-                con nosotros!</p>
+              <p class="card-text">
+                Encuentra el estilo que te define con nuestras gorras
+                exclusivas. ¡Eleva tu look con nosotros!
+              </p>
               <a href="#" class="btn btn-outline-secondary">Explorar</a>
             </div>
           </div>
@@ -135,44 +139,52 @@
         <div class="row" data-aos="fade-up">
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/plana.webp" class="card-img-top img-fluid" alt="...">
+              <img src="./img/plana.webp" class="card-img-top img-fluid" alt="gorra-plana" />
               <div class="card-body">
                 <h5 class="card-title">Planas</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make
+                  up the bulk of the card's content.
+                </p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/curva-_1_-1.webp" class="card-img-top img-fluid" alt="...">
+              <img src="./img/curva-_1_-1.webp" class="card-img-top img-fluid" alt="gorra-curva" />
               <div class="card-body">
                 <h5 class="card-title">Curvas</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make
+                  up the bulk of the card's content.
+                </p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/trucker (1).jpg" class="card-img-top img-fluid" alt="...">
+              <img src="./img/trucker (1).jpg" class="card-img-top img-fluid" alt="gorra-trucker" />
               <div class="card-body">
                 <h5 class="card-title">Trucker</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make
+                  up the bulk of the card's content.
+                </p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/pana (1).jpg" class="card-img-top img-fluid" alt="...">
+              <img src="./img/pana (1).jpg" class="card-img-top img-fluid" alt="gorra-pana" />
               <div class="card-body">
                 <h5 class="card-title">De Pana</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make
+                  up the bulk of the card's content.
+                </p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
               </div>
             </div>
@@ -185,44 +197,52 @@
         <div class="row" data-aos="fade-left">
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/senderismo (1).webp" class="card-img-top img-fluid" alt="...">
+              <img src="./img/senderismo (1).webp" class="card-img-top img-fluid" alt="mochila-senderismo" />
               <div class="card-body">
                 <h5 class="card-title">Senderismo</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make
+                  up the bulk of the card's content.
+                </p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/urbana (1).webp" class="card-img-top img-fluid" alt="...">
+              <img src="./img/urbana (1).webp" class="card-img-top img-fluid" alt="mochila-urbana" />
               <div class="card-body">
                 <h5 class="card-title">Urbanas</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make
+                  up the bulk of the card's content.
+                </p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/escolar (1).webp" class="card-img-top img-fluid" alt="...">
+              <img src="./img/escolar (1).webp" class="card-img-top img-fluid" alt="mochila-escolar" />
               <div class="card-body">
-                <h5 class="card-title">Escolares </h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+                <h5 class="card-title">Escolares</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make
+                  up the bulk of the card's content.
+                </p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/laptop (1).jpg" class="card-img-top img-fluid" alt="...">
+              <img src="./img/laptop (1).jpg" class="card-img-top img-fluid" alt="mochila-laptop" />
               <div class="card-body">
                 <h5 class="card-title">Para laptop</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make
+                  up the bulk of the card's content.
+                </p>
                 <a href="#" class="btn btn-outline-dark">Go somewhere</a>
               </div>
             </div>
@@ -231,7 +251,7 @@
       </div>
     </section>
     <!--Seccion de politicas de privacidad-->
-    <FOoter class="footer border-top py-4" id="Politicas">
+    <footer class="footer border-top py-4" id="Politicas">
       <div class="container-lg">
         <div class="row">
           <div class="col-lg-12">
@@ -242,7 +262,7 @@
           </div>
         </div>
       </div>
-    </FOoter>
+    </footer>
   </main>
   <script src="./aos/aos.js"></script>
   <script src="./js/script.js"></script>
@@ -251,5 +271,6 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
 </body>
+</main>
 
 </html>
