--- a/index.html
+++ b/index.html
@@ -20,10 +20,51 @@
   <meta name="google-site-verification" content="vHkHDqUwN6fYkllW0SomT0ThXuEaejEF1isgDHFUTpY" />
 
   <link rel="stylesheet" href="./css/index.css" />
+  <link rel="stylesheet" href="./css/whatsapp.css">
+  <link rel="stylesheet" href="./css/bootstrap-icons/">
+
+  <meta http-equiv="Content-Securiry-Policy" content="default-src">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
 
 </head>
 <main>
 <body class="Cuerpo">
+  <!--Whataspp-->
+  <div class="whatsapp_chat_support wcs_fixed_right" id="button-w">
+    <div class="wcs_button_label">
+      Contáctanos
+    </div>
+    <div class="wcs_button wcs_button_circle">
+      <span class="bi bi-whatsapp"></span>
+    </div>
+
+    <div class="wcs_popup">
+      <div class="wcs_popup_close">
+        <span class="bi bi-x"></span>
+      </div>
+      <div class="wcs_popup_header">
+        <span class="bi bi-whatsapp"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00b341" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+          <path d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1" />
+        </svg></span>
+        <strong>Servicio al cliente</strong>
+
+        <div class="wcs_popup_header_description">
+          <p>¡Hola! ¿Necesitas ayuda? Contáctame por WhatsApp. Estoy aquí para asistirte.</p>
+        </div>
+
+      </div>
+      <div class="wcs_popup_input" data-number="5529710007"
+        data-availability='{ "monday":"07:00-23:59", "tuesday":"07:00-23:59", "wednesday":"07:00-23:59", "thursday":"07:00-23:59", "friday":"07:00-23:59", "saturday":"07:00-23:59", "sunday":"07:00-23:59"}'>
+        <input type="text" placeholder="¿En qué puedo ayudarte?" />
+        <i class="bi bi-play-fill"></i>
+      </div>
+    </div>
+  </div>
+  <!--Whataspp-->
   <header>
     <!-- Navbar-->
     <nav class="navbar navbar-expand-lg fixed-top" id="principio">
@@ -51,7 +92,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./prueba.html">Gorras</a>
+              <a class="nav-link active" aria-current="page" href="#gorrass">Gorras</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#mochilas">Mochilas</a>
@@ -59,6 +100,14 @@
           </ul>
         </div>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./formulario.html">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94"/>
+              </svg>
+            </a>
+          </li>
           <!-- icono de un carrito -->
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">
@@ -134,6 +183,7 @@
     </div>
   </section>
   <main>
+    <!--Tarjeta gorras-->
     <section class="gorras1" id="gorrass">
       <div class="container">
         <div class="row" data-aos="fade-up">
@@ -165,7 +215,7 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/trucker (1).jpg" class="card-img-top img-fluid" alt="gorra-trucker" />
+              <img src="./img/trucker (1).webp" class="card-img-top img-fluid" alt="gorra-trucker" />
               <div class="card-body">
                 <h5 class="card-title">Trucker</h5>
                 <p class="card-text">
@@ -178,7 +228,7 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/pana (1).jpg" class="card-img-top img-fluid" alt="gorra-pana" />
+              <img src="./img/pana (1).webp" class="card-img-top img-fluid" alt="gorra-pana" />
               <div class="card-body">
                 <h5 class="card-title">De Pana</h5>
                 <p class="card-text">
@@ -192,6 +242,7 @@
         </div>
       </div>
     </section>
+    <!--Tarjeta mochilas-->
     <section class="mochilas1 py-5" id="mochilas">
       <div class="container">
         <div class="row" data-aos="fade-left">
@@ -236,7 +287,7 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="card">
-              <img src="./img/laptop (1).jpg" class="card-img-top img-fluid" alt="mochila-laptop" />
+              <img src="./img/laptop (1).webp" class="card-img-top img-fluid" alt="mochila-laptop" />
               <div class="card-body">
                 <h5 class="card-title">Para laptop</h5>
                 <p class="card-text">
@@ -267,10 +318,15 @@
   <script src="./aos/aos.js"></script>
   <script src="./js/script.js"></script>
   <script src="./js/index.js"></script>
+  <script src="./js/whatsapp.js"></script>
+  <script>
+    $('#button-w').whatsappChatSupport({
+      defaultMsg: '',
+    });
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
 </body>
 </main>
-
 </html>
